--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,13 @@
 <body>
 
 <p>你好！[[${user.userName}]]</p>
+<h3>权限测试链接</h3>
+<div>
+    <a th:href="@{/user/list}">获取用户信息</a>
+    <a th:href="@{/user/add}">新增用户</a>
+    <a th:href="@{/user/delete}">删除用户</a>
+</div>
+<a th:href="@{/online/index}">在线用户管理</a>
 <a th:href="@{/logout}">注销</a>
 
 </body>
